task_2/nginx-deploy-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-canary
  labels:
    app: nginx-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-canary
  template:
    metadata:
      labels:
        app: nginx-canary
    spec:
      containers:
      - name: nginx-canary
        image: nginx:alpine
        resurces:
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-cm-canary
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-cm-canary
        configMap:
          name: nginx-cm-canary
