task_2/web-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx:stable
        ports:
        - containerPort: 80
        volumeMounts:
            - name: web-cm
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: web-cm
        configMap:
          name: web-cm
