task_2/nginx-svc-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
  labels:
     name: nginx-canary
spec:
  selector:
    app: nginx-canary
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
