task_2/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
     name: nginx
spec:
  selector:
    app: nginx
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
