task_2/web-svc-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: web-canary
  labels:
     name: web-canary
spec:
  selector:
    app: web-canary
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
