task_2/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
     name: web
spec:
  selector:
    app: web
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
