task_2/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginx.io
    http:
      paths:
      - path: /
        pathType: Prefix
        path: "/task_2/"
        backend:
          service:
             name: web
             port:
                number: 80
